# whodunit

./: .gitignore  pyproject.toml
tests/: conftest.py  test_commits.py  test_diffs.py  test_metautils.py
whodunit/: commits.py  diffs.py  metautils.py
